test_files/fails/c_no_clock_delay.ar
let ltr = delay 1;

console <- 1 :: never;